--- a/empservice/pom.xml
+++ b/empservice/pom.xml
@@ -15,6 +15,8 @@
 
     <properties>
         <spring-cloud.version>Dalston.SR3</spring-cloud.version>
+        <!--swagger version-->
+        <io.springfox.version>2.6.1</io.springfox.version>
     </properties>
 
     <dependencies>
@@ -41,6 +43,21 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!--swagger ui-->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${io.springfox.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>${io.springfox.version}</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
 
