--- a/empservice/pom.xml
+++ b/empservice/pom.xml
@@ -58,6 +58,17 @@
             <scope>compile</scope>
         </dependency>
 
+        <!--Spring data-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
+        <!--MySQL-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
     </dependencies>
 
 
