Sample insert data is added to DB

--- a/employee-service/src/main/resources/application.yml
+++ b/employee-service/src/main/resources/application.yml
@@ -7,6 +7,11 @@ spring:
     password: admin
     driver-class-name: com.mysql.jdbc.Driver
 
+#spring:
+#  jpa:
+#    hibernate:
+#      ddl-auto: update
+
 # Discovery Server Access
 eureka:
   client:
